--- a/hidden-port/package.json
+++ b/hidden-port/package.json
@@ -10,8 +10,8 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "^4.17.1",
-    "jade": "~1.11.0",
     "morgan": "~1.9.1",
+    "pug": "^2.0.4",
     "serve-favicon": "~2.4.5"
   }
 }
