--- a/ctf-entry/docker-compose.yml
+++ b/ctf-entry/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "2"
 services:
   node:
-    image: "node:8"
+    image: "node:latest"
     user: "node"
     working_dir: /usr/src/app
     environment:
